--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
 asgiref==3.5.2
-certifi==2022.9.24
-charset-normalizer==2.1.1
 Django==4.1.2
-docopt==0.6.2
-idna==3.4
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-pipreqs==0.4.11
-requests==2.28.1
+django-stubs==1.12.0
+django-stubs-ext==0.5.0
+mypy==0.982
+mypy-extensions==0.4.3
 sqlparse==0.4.3
-tzdata==2022.4
-urllib3==1.26.12
-yarg==0.1.9
+tomli==2.0.1
+types-pytz==2022.4.0.0
+types-PyYAML==6.0.12
+typing_extensions==4.4.0
+tzdata==2022.5
