--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.5.2
 Django==4.1.2
 django-stubs==1.12.0
 django-stubs-ext==0.5.0
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 mypy==0.982
 mypy-extensions==0.4.3
 sqlparse==0.4.3
